--- a/index.html
+++ b/index.html
@@ -3,10 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./styles/sass/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Roboto:wght@300;400;700&display=swap"
+        rel="stylesheet">
     <title>Daljit Singh Sokhi</title>
 </head>
 <body>
+
+    <header>
+        <nav class="wrapper">
+            <div class="logo">
+                <img src="./assets/globe.png" alt="">
+            </div>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">Philosophy</a> </li>
+                <li><a href="./contact.html">Contact</a> </li>
+            </ul>
+        </nav>
+
+        <div class="hero wrapper">
+            <h1>Daljit Singh Sokhi</h1>
+            <p>Achieving Your Potential</p>
+        </div>
+    </header>
+
+    <main class="wrapper">
+        <div class="about">
+            <h2>About Me</h2>
+            <div class="aboutContainer">
+
+                <div class="profile">
+                    <img src="./assets/dalProfile.jpg" alt="">
+                </div>
+                <div class="aboutText">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A odit atque vitae cumque enim assumenda eligendi, optio culpa error ex exercitationem id cum explicabo ab perferendis. Deserunt eaque est omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed eum esse excepturi autem voluptas minus optio nostrum earum, omnis in tempore doloribus distinctio? Est ratione commodi atque dolores consequatur veritatis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est delectus ut cupiditate nihil ea perspiciatis odio vero? Vel consectetur cumque eaque, odit, vero adipisci similique, exercitationem est nesciunt voluptatibus maxime.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="specialties">
+            <h2>Specialties</h2>
+            <h3>Secondary Education</h3>
+            <div class="subjects">
+                <ul>
+                    <li>Advanced Functions</li>
+                    <li>Calculus and Vectors</li>
+                    <li>Chemistry</li>
+                    <li>Physics</li>
+                </ul>
+            </div>
+        </div>
+    </main>
+    
+    <footer class="wrapper">
+        <p>Created by <a href="http://www.baljitsokhi.com/">Baljit Kaur Sokhi</a> © 2021</p>
+    </footer>
+
     
 </body>
 <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
