changed about to phil

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">Philosophy</a> </li>
+                <li><a href="./phil.html">Philosophy</a> </li>
                 <li><a href="./contact.html">Contact</a> </li>
             </ul>
         </nav>
