--- a/phil.html
+++ b/phil.html
@@ -14,13 +14,13 @@
             </div>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">About</a> </li>
+                <li><a href="./phil.html">Philosophy</a> </li>
                 <li><a href="./contact.html">Contact</a> </li>
             </ul>
         </nav>
 
         <div class="about-hero wrapper">
-             <h1>About</h1>
+             <h1>Philosophy</h1>
         </div>
     </header>
 
