added experience page and icons on home page

--- a/experience.html
+++ b/experience.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/sass/style.css">
-    <title>Teaching Philosophy</title>
+    <title>Work Experience</title>
 </head>
 <body>
     <header>
@@ -19,15 +20,10 @@
                 <li><a href="./contact.html">Contact</a> </li>
             </ul>
         </nav>
-
+    
         <div class="about-hero wrapper">
-            <h1>Teaching Philosophy</h1>
+            <h1>Work Experience</h1>
         </div>
     </header>
-
-   
 </body>
-
-<script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
-<script src="./scripts.js"></script>
 </html>
