--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,8 @@
             </div>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./phil.html">Philosophy</a> </li>
+                <li><a href="./phil.html">Teaching Philosophy</a> </li>
+                <li><a href="./experience.html">Work Experience</a></li>
                 <li><a href="./contact.html">Contact</a> </li>
             </ul>
         </nav>
